# codelore

./: .env.example  .gitignore  DEMO_SCRIPT.md  LICENSE  README.md  pyproject.toml
backend/: config.py  main.py
backend/api/: __init__.py  auth.py  chat.py  explore.py  github.py  health.py  ingest.py  onboard.py
backend/models/: schemas.py
backend/scripts/: ingest_repo.py  seed_demo_data.py  setup_agent.py  setup_indices.py
backend/services/: agent_builder.py  auth_store.py  cache.py  elasticsearch_client.py  embedding_service.py  github_ingester.py  sse_helpers.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/ask/: AskMode.tsx
frontend/src/components/explore/: DecisionGraph.tsx  ExpertPanel.tsx  ExploreMode.tsx  ImpactPanel.tsx  SemanticResults.tsx  Timeline.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/onboard/: OnboardMode.tsx
frontend/src/components/setup/: AuthCallback.tsx  SetupPage.tsx
frontend/src/components/shared/: ChatInput.tsx  LoadingState.tsx  SourceCard.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useTimeline.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/styles/: index.css
